outputs/tsp_aco-aco/2026-03-07_19-37-45/problem_iter13_response1.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 314
    mst_scores[i, j] = mst_scores[j, i] += degree_bonus
                                        ^^
SyntaxError: invalid syntax
